# luckydraw

./: .env.example  .gitignore  .prettierrc  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/workflows/: release.yml
.husky/: pre-commit
scripts/: createRelease.js  mklink.bat  updateVersion.js
src/: App.vue  commands.js  main.js  main.ts  style.css
src-tauri/: .gitattributes  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: avatar.rs  commands.rs  config.rs  lib.rs  main.rs  utils.rs
src/api/: storage.ts  tauri.ts
src/components/: Avatar3D.vue  AvatarGrid.vue  BackgroundLayer.vue  InfoPanel.vue  LuckMask.vue  SplashScreen.vue
src/composables/: useAudio.ts  useKeyboard.ts  useLayout.ts  useLuckyControl.ts
src/stores/: assets.ts  lucky.ts
src/styles/: global.css
src/types/: config.ts  lucky.ts
